# CPS1012-eggshell

./: README.md
src/: CMakeLists.txt  dynamicArray.c  dynamicArray.h  externalCmds.c  internalCmds.c  linenoise.h  main.c  piping.c  redirectionHandler.c  sizes.h  stackLib.c  stackLib.h  variables.c
